--- a/pom.xml
+++ b/pom.xml
@@ -81,4 +81,19 @@
 		</plugins>
 	</build>
 
+	<executions>
+		<execution>
+			<goals>
+				<goal>prepare-agent</goal>
+			</goals>
+		</execution>
+		<execution>
+			<id>jacoco-report</id>
+			<phase>test</phase>
+			<goals>
+				<goal>report</goal>
+			</goals>
+		</execution>
+	</executions>
+
 </project>
